2.67    * fix thread-safety for GD::Simple %COLORS (#26 melak)
        * fix arc start-angle docs, RT #123277 Andrew G Gray
        * improve setBrush docs, RT #123194 Andrew G Gray
        * improve StringFT docs, RT #123193
        * replace MacOSX by darwin, and not by Mac OS X/macOS as suggested
          in PR #24
2.66    * throw proper error on newFrom* with not-existing file
        * add t/transp.t from RT #40525
        * Improve RT #54366 multiple gd.h warning
        * better doc for GD::Simple->arc
        * fix ANIMGIF with libgd 2.3.0-dev
2.65    * fix --gdlib_config_path to accept an argument (fperrad)
2.64    * Update doc for LIBGD_VERSION()
        * Fix 5.6.2, which does not have float in its typemap
2.63    * renamed VERSION() to LIBGD_VERSION(), RT #121307.
          It was treated magically by "use GD 2.18"
2.62    * fixed wrong <5.14 code generated with ExtUtils::Constants
          RT #121297. Don't generate const-xs.inc, only when missing.
        * add -liconv on hpux also (our pkgconfig parser cannot handle it)
2.61    * add CONFIGURE_REQUIRES META
        * add --gdlib_config_path
        * add Image Filters: scatter, pixelate, negate, grayscale, brightness,
          contrast, color, selectiveBlur, edgeDetectQuick, gaussianBlur, emboss,
          meanRemoval, smooth, copyGaussianBlurred
        * add palette methods: createPaletteFromTrueColor,
          neuQuant (but discouraged), colorMatch.
        * add interpolation methods: copyScale, copyRotateInterpolated,
          interpolationMethod.
        * add double GD::VERSION
        * add all gd.h constants
2.60    * add missing methods newFromWBMP, newFromXbm,
          (RT #68784) and some missing docs
        * Add --lib_fontconfig_path, --fcgi options
        * rewrote most of the XS code
        * cleanup Makefile.PL #20
2.59    * error on failing libgd calls
        * fix colorClosestAlpha, colorAllocateAlpha
        * add missing documentation