@@ -4,6 +4,8 @@
         * improve StringFT docs, RT #123193
         * replace MacOSX by darwin, and not by Mac OS X/macOS as suggested
           in PR #24
+        * add GD::Image->_file method as suggested in RT #60488 by Kevin Ryde,
+          also the helper GD::supportsFileType
 2.66    * throw proper error on newFrom* with not-existing file
         * add t/transp.t from RT #40525
         * Improve RT #54366 multiple gd.h warning
